feat: add two-stage expectimax agent

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,10 @@ jobs:
     - name: 3. Ensure env.so is executable
       run: chmod +x env.cpython-38-x86_64-linux-gnu.so
 
-    - name: 4. Run Evaluation
+    - name: 4. Download weights
+      run: |
+        gdown https://drive.google.com/file/d/14-ZdNoBDwmkX9rtCNe1a0AhrbP-oRtff/view?usp=sharing
+        gdown https://drive.google.com/file/d/1xl-eFAwPPs_yUkAzONxNjmay8HkQSHTY/view?usp=sharing
+
+    - name: 5. Run Evaluation
       run: python eval.py --token a91aae52cff9ef65932db06b150ffd47
